<resources>
    <string name="app_name">Đa khoa Hưng Yên</string>
    <string name="user_image" translatable="false">User image</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="information">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_hint">you@example.com</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_hint">Full name</string>
    <string name="register">Create an account</string>
    <string name="phone_number">Phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_your_account">Create your account</string>
    <string name="remember_me">Keep me logged in</string>
    <string name="username" translatable="false">Username</string>
    <string name="username_hint">username</string>
    <string name="news">News</string>
    <string name="prescription">Prescription</string>
    <string name="Booking">Booking</string>
    <string name="see_more">See more</string>
    <string name="your_account">Your account</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="basic_information">Information</string>
    <string name="relative">Relative</string>
    <string name="address">Address</string>
    <string name="not_update">Not update</string>
    <string name="ho_so_benh_nhan">Hồ sơ bệnh nhân</string>
    <string name="patient_tips">Please select one of the records below, or click the icon above to add a patient record.</string>
    <string name="new_doctor_tipss">Nếu tài khoản của bạn mới được cấp, vui lòng thiết lập thông tin bác sĩ của mình.</string>
    <string name="booking_tips">Bạn chỉ đặt khám được một lần, vui lòng hoàn thành lịch khám đang chờ để có thể đặt lịch mới.</string>
    <string name="prescription_tips">Sau khi khám tại bệnh viện, nếu bạn yêu cầu bác sĩ có thể lên đơn thuốc trực tuyến. Điều này giúp thiểu giấy tờ và bảo vệ môi trường.</string>
    <string name="doctor_tips">Vui lòng chọn bác sĩ bên dưới. Nếu danh sách bác sĩ trống vui lòng thay đổi thời gian hoặc ngày đặt khám.</string>
    <string name="calendar_tips" translatable="false">Vui lòng chọn ngày khám, tránh các ngày cuối tuần và ngày nghỉ lễ.</string>
    <string name="service">Loại hình khám<font color='@android:color/red'><sup>*</sup></font></string>
    <string name="department">Chuyên khoa<font color='@android:color/red'><sup>*</sup></font></string>
    <string name="date">Date<font color='@android:color/red'><sup>*</sup></font></string>
    <string name="time">Time<font color='@android:color/red'><sup>*</sup></font></string>
    <string name="patient">Patient<font color='@android:color/red'><sup>*</sup></font></string>
    <string name="doctor">Doctor<font color='@android:color/red'><sup>*</sup></font></string>
    <string name="full_name">Full name<font color='@android:color/red'><sup>*</sup></font></string>
    <string name="note">Note</string>
    <string name="hint_note">Triệu chứng, thuốc đang dùng, tiền sử...</string>
    <string name="next">Next</string>
    <string name="choose_department">Choose department</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="patient_information">Patient Information</string>
    <string name="select">Xác nhận</string>
    <string name="booking_infomation">Booking Infomation</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date_of_birth_req">Date of birth<font color='@android:color/red'><sup>*</sup></font></string>
    <string name="date_">Date</string>
    <string name="time_">Time</string>
    <string name="department_">Department</string>
    <string name="price">Price</string>
    <string name="payment_notification">Chức năng này đang được phát triển. Vui lòng chọn thanh toán tại bệnh viện để tiếp tục đặt khám. Trân trọng cảm ơn</string>
    <string name="payment_method">Select payment method</string>
    <string name="place_an_order">Place an order</string>
    <string name="hospital_address">Đường Hải Thượng Lãn Ông, phường An Tảo, TP Hưng Yên</string>
    <string name="hospital_name">Bệnh viện đa khoa tỉnh Hưng Yên</string>
    <string name="medical_appointment">Medical Appointment</string>
    <string name="pending">Chờ khám</string>
    <string name="filter">Filter</string>
    <string name="your_prescription">Your Prescription</string>
    <string name="log_out">Log out</string>
    <string name="change_pasword">Change password</string>
    <string name="passwordandsecurity"><![CDATA[Password & Security]]></string>
    <string name="gender">Gender</string>
    <string name="job">Job</string>
    <string name="submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="delete_patient">Delete</string>
    <string name="current_password">Current password<font color="@android:color/red"><sup>*</sup></font></string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_hint">09xxxxxxxx</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="update">Update</string>
    <string name="patient_id">Patient ID</string>
    <string name="complete">Lịch đã khám</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="reason">Reasons</string>
    <string name="other">Other</string>
    <string name="medicines">Medicines</string>
    <string name="patient_">Patient Name</string>
</resources>