<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:elevation="10dp"
    android:background="@drawable/rounded_bg_blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/change_pasword"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/edt_currentPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_background_white"
        android:backgroundTint="@color/white"
        android:hint="@string/current_password"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:autofillHints="Current password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edt_newPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_background_white"
        android:backgroundTint="@color/white"
        android:hint="@string/new_password"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:autofillHints="New password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/edt_reNewPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_background_white"
        android:backgroundTint="@color/white"
        android:hint="@string/confirm_password"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:autofillHints="New password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_background_white"
        android:text="OK"
        android:textColor="@color/black" />

</LinearLayout>