<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_gravity="top|center"
        android:scaleType="centerInside"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/register" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="16dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="10dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/blue"
                android:elevation="10dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/blue_dark" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:elevation="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/blue_dark" />

            <Button
                android:id="@+id/btn_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/grey" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_background"
                android:elevation="10dp"
                android:padding="8dp"
                android:text="@string/login"
                android:textColor="@color/white" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_you_have_an_account"
            android:textColor="@color/grey" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/sign_up"
            android:textColor="@color/blue" />

    </LinearLayout>


</LinearLayout>
