<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.UpdateUserInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="center"
            android:text="Chỉnh sửa thông tin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511" />

        <ImageButton
            android:id="@+id/igb_backUpdateUserInfo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:elevation="10dp"
                app:cardCornerRadius="200dp">

                <ImageView
                    android:id="@+id/img_userProfilePhoto"
                    android:layout_width="100dp"
                    android:scaleType="centerCrop"
                    android:layout_height="100dp"
                    android:contentDescription="@string/username"
                    android:src="@drawable/default_user_image" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnChangeUserImage"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/change_profile_photo"
                android:textAllCaps="false"
                android:textColor="@color/navy"
                android:textSize="12sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/full_name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edtUserFullname"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/round_outline_gray_btn"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/grey"
                    android:gravity="start|center"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:drawableStartCompat="@drawable/baseline_person_24"
                    android:autofillHints="name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/email"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edtEmailE"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/round_outline_gray_btn"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/grey"
                    android:gravity="start|center"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:drawableStartCompat="@drawable/baseline_email_24"
                    android:autofillHints="emailAddress" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_benhNhan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edtPhoneNumE"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="Your address"
                    android:background="@drawable/round_outline_gray_btn"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/grey"
                    android:gravity="start|center"
                    android:hint="@string/phone_hint"
                    android:inputType="number"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:drawableStartCompat="@drawable/baseline_local_phone_24"
                    tools:ignore="TextFields" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_UpdateUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_bg_blue"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>