<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    tools:context=".activities.RegisterActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="16dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="10dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_background_white"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/blue"
                android:elevation="10dp"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/blue_dark" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="10dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/rounded_background_white"
                android:drawableStart="@drawable/baseline_edit_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/blue"
                android:elevation="10dp"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/blue_dark" />


            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="10dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_background_white"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:elevation="10dp"
                android:hint="Enter your password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/blue_dark" />

            <EditText
                android:id="@+id/edt_re_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="10dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_background_white"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:elevation="10dp"
                android:hint="Re-enter your password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/blue_dark" />

            <EditText
                android:id="@+id/edt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="10dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_background_white"
                android:drawableStart="@drawable/baseline_local_phone_24"
                android:drawablePadding="10dp"
                android:elevation="10dp"
                android:hint="@string/phone_number"
                android:inputType="text|phone"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/blue_dark" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_background_white"
                android:elevation="10dp"
                android:padding="8dp"
                android:backgroundTint="@color/blue"
                android:text="@string/create_your_account"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/grey" />

        <Button
            android:id="@+id/edt_back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
